sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: '=' expected but ';' found.
	var bonnePlace;
                      ^